# confundo

./: README.md
dev/build-system-skeletons/qmake/foo/bar1/: bar1.pro
dev/build-system-skeletons/qmake/foo/bar2/: bar2.cpp
dev/cpp/circulardep/: Bar.cpp  Bar.h  CMakeLists.txt  Node.cpp  Node.h  main.cpp
dev/other/llvm-bitcode-cmake-utils/: CMakeLists.txt
dev/other/llvm-bitcode-cmake-utils/cmake/: Util.cmake
dev/other/llvm-bitcode-cmake-utils/src/: CMakeLists.txt
dev/project-layout-skeletons/ipc/dbus/qt/util/: Makefile.stubs.base
dev/project-layout-skeletons/qmake/foo/: project-post0.pri  project.pro
dev/project-layout-skeletons/qmake/foo/bar1/: bar1.cpp
dev/project-layout-skeletons/qmake/foo/bar2/: bar2.pro
dev/scripts/: git-subproject-recursive-checkout.sh  llvm-build.sh  llvm-git-clone.sh
dev/stubs/dbus/qt/src/: FoobarOperations.h  Makefile.stubs
notetaking/skeletons/: meta_info_header.md
typography/latex/simple01/: CMakeLists.txt  README.md  simple01.tex
